...
  const handleLogin = async () => {
    let hasErrors = false;
    setPasswordError("");
    setEmailError("");

    if (!email) {
      setEmailError("Please enter your email.");
      hasErrors = true;
    }

    if (!password) {
      setPasswordError("Please enter your password.");
      hasErrors = true;
    }

    if (hasErrors) return;

    setLoginLoading(true);
...
      } else {
        logOut();
        toast.error("There was an error logging you in. Please try again", { visibilityTime: 10000 });
      }
    } else {
      if (status === 401) {
        toast.error("Invalid credentials. Please try again.", { visibilityTime: 10000 });
      } else {
        toast.error("There was an error logging you in. Please try again", { visibilityTime: 10000 });
      }
    }
    setLoginLoading(false);
  };
...
          <View style={s.inputsContainer}>
            <TextInput
              label="Email"
              value={email}
              onChangeText={setEmail}
              error={emailError}
              placeholder="youremail@email.com"
              icon={<Ionicons name="at-sharp" size={20} color={setLightOrDark(COLORS.zinc[800], COLORS.zinc[500])} />}
              autoCapitalize="none"
              keyboardType="email-address"
              autoComplete="email"
            />
            <TextInput
...
              placeholder="*********"
              icon={
                <Ionicons name="key-outline" size={20} color={setLightOrDark(COLORS.zinc[800], COLORS.zinc[500])} />
              }
              autoCapitalize="none"
              secureTextEntry
              testID="login-password"
            />
          </View>

          <Button text="Log In" onPress={handleLogin} loading={loginLoading} testID="login-button" />

          <View style={s.helperTextContainer}>
            <Text darkColor={COLORS.zinc[400]} style={{ fontSize: 18 }}>
              Don't have an account?
            </Text>
            <Button text="Register" variant="text" onPress={() => router.replace("/auth/register")} />
...
