...
            </Text>{" "}
            deserve this.
          </Text>
          <View style={{ flex: 1, justifyContent: "flex-end" }}>
            <View style={{ alignItems: "center", paddingBottom: 92, gap: 24 }}>
              <Button
                text="Log in"
                variant="text"
                onPress={() => router.push("/auth/login")}
                textStyle={{ fontSize: 20, fontWeight: 500, color: isDarkMode ? COLORS.sky[600] : COLORS.sky[500] }}
              />
              <Text darkColor={COLORS.zinc[500]} style={{ fontSize: 18 }}>
                - or -
              </Text>
              <Button
                text="Create an Account"
                variant="text"
                onPress={() => router.navigate("/auth/register")}
                textStyle={{ fontSize: 20, fontWeight: 400 }}
              />
            </View>
          </View>
...
