...
            </View>
          ) : null}
        </View>
        <View style={s.footerInputContainer}>
          <View style={{ flex: 1 }}>
            <BottomSheetTextInput
              placeholder={replyToComment ? `Reply to @${replyToComment.profile.username}...` : "Add comment..."}
              ref={commentInputRef}
              defaultValue={inputValueRef.current}
              onChangeText={(text) => {
                inputValueRef.current = text;
                setInputHasText(!!text);
                if (errorText) setErrorText("");
...
            ) : null}
            <View style={{ flex: 1, justifyContent: "flex-end" }}>
              <Pressable
                style={({ pressed }) => [{ opacity: pressed || isSubmitting ? 0.5 : 1 }]}
                onPress={handleSubmit}
                disabled={isSubmitting}
                testID="add-comment-button"
              >
                <View style={s.addCommentButton}>
                  {!isSubmitting ? (
                    <Ionicons name="arrow-up-outline" size={24} color={COLORS.zinc[100]} />
                  ) : (
                    <ActivityIndicator size="small" color={COLORS.zinc[200]} />
...
