...
      commentInputFooterRef.current?.clear();
      setParentComment(null);
      setReplyToComment(null);
    }, []);

    return (
      <BottomSheetModal ref={ref} onChange={handleSheetChanges} onDismiss={onClose} handleTitle="Comments">
        <BottomSheetFlatList
          ref={flatListRef}
          data={comments}
          contentContainerStyle={{ paddingBottom: 24, flexGrow: 1 }}
          keyExtractor={(item: PostCommentDetailed) => item.id.toString()}
          onEndReachedThreshold={0.3} // Trigger when 30% from the bottom
...
