...
            {reports.length ? (
              <View style={{ marginBottom: authProfile.id === postProfileId ? 36 : 0 }}>
                <View style={{ marginBottom: 16, alignItems: "center" }}>
                  <Ionicons name="alert-circle-outline" size={48} color={COLORS.red[600]} />
                </View>
                <Text darkColor={COLORS.zinc[200]} style={{ fontSize: 18, marginBottom: 24, textAlign: "center" }}>
                  This post has been reported for:
                </Text>
                <View style={{ marginBottom: 12 }}>
                  {reportReasonsArray.map((reason, i) => {
                    return (
                      <View key={i}>
                        <Text style={{ fontSize: 18, textAlign: "center", fontWeight: "600", marginBottom: 4 }}>
...
                    <View
                      style={[
                        s.profileOption,
                        { borderBottomWidth: 1, borderBottomColor: isDarkMode ? COLORS.zinc[700] : COLORS.zinc[400] },
                      ]}
                    >
                      <Text style={{ textAlign: "center", fontSize: 18 }}>Edit Post</Text>
                    </View>
                  </Pressable>
                  <Pressable
                    style={({ pressed }) => [
                      pressed && !deleteLoading ? { opacity: 0.5 } : deleteLoading ? { opacity: 0.5 } : null,
                    ]}
                    onPress={handleShowConfirmModal}
                    disabled={deleteLoading}
                  >
                    <View style={[s.profileOption]}>
                      <Text style={{ textAlign: "center", fontSize: 18 }}>Delete Post</Text>
                    </View>
                  </Pressable>
                </>
              ) : (
                <>
                  <Pressable
...
