...
        intensity={90}
        style={[s.blurView, { backgroundColor: isDarkMode ? "#09090bb5" : "#d6d6dbb5" }]}
        testID={`post-${postId}-hidden-view`}
      >
        <Ionicons name="eye-off" size={42} color={isDarkMode ? COLORS.zinc[500] : COLORS.zinc[700]} />
        <Text style={s.reportedText} lightColor={COLORS.zinc[700]} darkColor={COLORS.zinc[500]}>
          {(isReported ? "You reported this post, " : "This post has been reported, ") + "so we hid it for you."}
        </Text>
        <Button
          text="Show Post"
          variant="text"
          onPress={() => onToggleHidden(postId)}
          textStyle={{ color: COLORS.sky[600] }}
...
