...
          loading={followLoading}
          loadingIconSize={12}
          loadingIconScale={0.7}
        />
      ) : (
        <Button
          text={profileData.follows_you ? "Follow Back" : "Follow"}
          textStyle={s.followButtonText}
          buttonStyle={[s.headerButton, { backgroundColor: setLightOrDark(COLORS.sky[500], COLORS.sky[700]) }]}
          onPress={() => handleFollowPress(profileData)}
          loading={followLoading}
          loadingIconSize={12}
          loadingIconScale={0.7}
...
