...
            followLoading={!!followLoading}
            handleUnfollowPress={handleUnfollowPress}
            handleFollowPress={handleFollowPress}
          />
        ) : (
          <Button
            text="Saved Posts"
            textStyle={[s.profileButtonText, { color: setLightOrDark(COLORS.zinc[800], COLORS.zinc[50]) }]}
            buttonStyle={[
              s.headerButton,
              { backgroundColor: setLightOrDark(COLORS.zinc[50], `${COLORS.zinc[600]}66`) },
            ]}
            onPress={() => router.push("/(app)/posts/savedPosts")}
...
