...
          isLoading={!posts.data || posts.isLoading}
          isError={posts.isError}
          isRefetching={posts.isRefetching}
          loadingComponent={<PostTileSkeleton />}
          errorMessage="There was an error fetching your saved posts."
          errorSubMessage="Swipe down to try again."
          emptyMessage="You haven't saved any posts yet."
        />
      }
      renderItem={({ item: post, index }) => <PostTile post={post} index={index} onPress={handlePostPress} />}
      ListFooterComponent={
        <LoadingRetryFooter
          isLoading={posts.isFetchingNextPage}
...
