...
        </Text>

        <View style={s.buttons}>
          <Button text="Recover Account" onPress={handleRecover} loading={recoverLoading} disabled={logOutLoading} />
          <View style={s.logOutButtonContainer}>
            <Button
              text="Log Out"
              variant="text"
              onPress={handleLogOut}
              loading={logOutLoading}
              disabled={recoverLoading}
            />
          </View>
...
