# addPostComment.yaml

# Test adding a comment to a post

appId: com.bdykun.onlypawsapp.dev
# name: Add Post Comment Flow

# TODO: check comment count before and after adding comment
---
- launchApp

# Navigate to explore tab
- tapOn: ".*Explore"

# Tap on Post
- tapOn:
    id: "post-tile-pressable-96"

# Tap on Post comment button
- tapOn:
    id: "post-comment-button-96"

# Comments modal should be empty with no comments
- assertVisible: "No comments yet."

# Tap on comment input text box
- tapOn: "Add comment..."

# Add comment
- inputText: "Wow what a dog!"
- tapOn:
    id: "add-comment-button"

# Assert comment is added in UI
- assertNotVisible: "No comments yet"
- assertVisible: "Add comment..."
- assertVisible: "Wow what a dog!"

# close the modal
- swipe:
    from:
      text: Comments
    direction: DOWN

# Assert modal was closed
- assertNotVisible: "Wow what a dog!"
