# ownPostsShowReports.yaml

# Test that own posts show that they have been reported

appId: com.bdykun.onlypawsapp.dev
# name: Own Posts Show Reports Flow

---
- launchApp

# navigate to posts screen
- tapOn: ".*Posts"

# reported post should show reported icon
- assertVisible:
    id: post-98-reported-icon

# tap on reported post
# TODO: test that alert icon shows on tile
- tapOn:
    id: "post-tile-pressable-98"

# post should show message that it has been reported
- assertVisible: "This post has been reported"
- tapOn:
    id: "post-menu-button-98"

# menu should show reasons why post was reported
- assertVisible: "This post has been reported for:"
- assertVisible: "Not Pet Related"
- assertVisible: "This post is under review."

# menu should show edit and delete buttons for post
- assertVisible: "Edit Post"
- assertVisible: "Delete Post"

