# Test that tapping on a Follow notification navigates
# user to the follow profile details screen

appId: com.bdykun.onlypawsapp.dev
---
- launchApp

# Navigate to posts tab
- tapOn:
    text: ".*Posts"
    retryTapIfNoChange: true

# Press notification bell
- tapOn:
    id: notifications-menu-button

# scroll down to notification
- scrollUntilVisible:
    element:
      text: "pitbulpup, started following you.*"

# Assert that the notification shows unread
- assertVisible:
    id: notification-indicator-62

# Tap on first follow notfication in the list
- tapOn: "pitbulpup, started following you.*"

# Assert that app navigated to the profile details of userone
- assertVisible: "@pitbulpup"
- assertVisible: Follows you
- assertVisible: Follow Back
- assertVisible: .*POSTS.*
- assertVisible: .*FOLLOWERS.*
- assertVisible: .*FOLLOWING.*

# Navigate back to notifications screen
- tapOn: Notifications

# Assert that the notification now shows read
- assertNotVisible:
    id: notification-indicator-62
