# savePost.yaml

# Test saving an explore post should then display the post in the saved posts list. Un-saving the post should then remove it from the saved posts list.

appId: com.bdykun.onlypawsapp.dev
# name: Save Post

---
- launchApp

# Navigate to Explore tab
- tapOn: ".*EXPLORE"

# Press on Post
- tapOn:
    id: "post-tile-pressable-95"

# Save Post
- tapOn:
    id: "post-save-button-95"

# Assert the notification appears
- assertVisible: "Post Saved!"

# Navigate to Posts tab
- tapOn:
    text: ".*POSTS"
    index: 1

# Open menu
- tapOn:
    id: "profile-details-menu-button"

# Tap View Saved Posts button
- tapOn: .*Saved Posts

# Assert that the Post shows up in saved Posts
- assertVisible:
    id: "post-tile-pressable-95"

# Navigate back to Explore tab
- tapOn: ".*EXPLORE"

# Unsave the Post
- tapOn:
    id: "post-save-button-95"

# Navigate back to Posts tab
- tapOn:
    text: ".*POSTS"
    index: 1

# Assert that the Post no longer shows up in saved Posts
- tapOn: "You haven't saved any posts yet."
