# logOut.yaml

# Test logging out of the app

appId: com.bdykun.onlypawsapp.dev
# name: Log Out Flow

---
- launchApp

# Navigate to the Profile tab
- tapOn: .*PROFILE

# Open menu
- tapOn:
    id: "view-profile-options-button"

# Tap Log Out button
- tapOn: "Log Out"

# Assert Log In button is visible - now logged out
- assertVisible:
    id: login-button
